addded mail , phone , video link..

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
     <form action="/"  enctype="multipart/form-data" method="POST">
         <label>Enter name: </label>
         <input  type="text" id = "team_name" name="name_field" value="Default name for team.">
+        <input  type="text" id = "phone" name="name_phone" value="9611127702 ">
+        <input  type="text" id = "video" name="name_video" value="give youtube link">
+        <input  type="text" id = "email" name="name_email" value="eg@gmail.com">
        
         photo <input type="file" name="myimage" accept="image/*">
         
@@ -12,8 +15,5 @@
     </form>
 
    <hr/>
-   
-    
-    
 </body>
 </html>
