--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-    <!-- class="w3-container w3-card-4" -->
-    <form class="w3-container" action="/"  method="POST" enctype="multipart/form-data">
+
+    <form class="w3-container" action="/index"  method="POST" enctype="multipart/form-data">
         <h2 class="w3-text-blue">Register Form</h2>
 
         <p>      
