--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,13 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/index" method="GET">
-   
-    <button>GO TO FORM SUBMISSION</button>
-</form>
-<form action="/login">
-    <button>GO TO LOGIN PAGE</button>
-    <br><br>
-</form>
+
+    <form action="/login" method="POST" >
+    email<input type="text" name="email">
+    <br>
+    pwd<input type="text" name="pwd"> 
+
+    <button> submit</button>
+    </form>
+    
 </body>
 </html>
