--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -73,7 +73,7 @@ input[type=text]:focus {
     </form>
     <br><br>
     <img src="../controller/uploads/myimage-1618646898019.jpg" alt="wow">
-    <img src="../uploads/myimage-1614654510018.jpg" alt="gig">
+    <img src="/uploads/myimage-1619524643579.jpg" alt="gig">
     
         <% for(var i =0 ; i < a.length;  i++ ) { %>
             <br>
