--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,5 +15,10 @@
     <button>GO TO LOGIN PAGE</button>
     <br><br>
 </form>
+
+<form action="/register">
+    <button>GO TO signup  PAGE</button>
+    <br><br>
+</form>
 </body>
 </html>
