--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -65,6 +65,8 @@ input[type=text]:focus {
 </head>
 <body>
 
+  <a href="/logout" class="btn btn-secondary">Logout</a>
+
     <form action="/search/something"  method="GET">
         <input type="text" name="search" placeholder="Search..">
         <br><br>
@@ -72,8 +74,7 @@ input[type=text]:focus {
         <button class="button button1">Search</button>
     </form>
     <br><br>
-    <img src="../controller/uploads/myimage-1618646898019.jpg" alt="wow">
-    <img src="/uploads/myimage-1619524643579.jpg" alt="gig">
+    
     
         <% for(var i =0 ; i < a.length;  i++ ) { %>
             <br>
@@ -96,4 +97,3 @@ input[type=text]:focus {
    
 </body>
 </html>
-../controller/uploads/myimage-1618646898019.jpg
