--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <input class="w3-input w3-border" name="name_video" type="text"></p>
         <p>  
         <p>      
-        <label class="w3-text-blue"><b>*enter Youtube Link </b></label>
+        <label class="w3-text-blue"><b>*enter email </b></label>
         <input class="w3-input w3-border" name="name_email" type="text"></p>
         <p> 
         <p>    
