--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,21 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/home.css">
+
+    <title>Home Page</title>
 </head>
 <body>
-    <form action="/index" method="GET">
-   
-    <button>GO TO FORM SUBMISSION</button>
-</form>
-<form action="/login">
-    <button>GO TO LOGIN PAGE</button>
-    <br><br>
-</form>
+<form action="/index" method="GET"><button class="btn">GO TO FORM SUBMISSION</button></form>
+<div class="container right-panel-active">
+            <!-- Sign Up -->
+            <div class="container__form container--signup">
+                <form action="/register" method="POST" class="form" id="form1">
+                    <h2 class="form__title">Sign Up</h2>
+                    <input type="text" placeholder="Enter Full Name" name="name" id="name" value="<%= typeof name != 'undefined' ? name : '' %>" class="input" required>
+                    <input type="email" placeholder="Enter Email" name="email" id="email" value="<%= typeof email != 'undefined' ? email : '' %>" class="input" required>
+                    <input type="password" placeholder="Enter Password" name="password" id="password" value="<%= typeof password != 'undefined' ? password : '' %>" class="input" required>
+                    <input type="password" placeholder="Repeat Password" name="password2" id="password2" value="<%= typeof password2 != 'undefined' ? password2 : '' %>" class="input" required>
+                    <button class="btn" type="submit" >Sign Up</button>
+                </form>
+            </div>
 
-<form action="/register">
-    <button>GO TO signup  PAGE</button>
-    <br><br>
-</form>
+            <!-- Sign In -->
+            <div class="container__form container--signin">
+                <form action="/login" method="POST" class="form" id="form2">
+                    <h2 class="form__title">Sign In</h2>
+                    <input type="text" id="email" name="email" placeholder="Email" class="input" required>
+                    <input type="password" placeholder="Enter Password"  id="password" name="password"  class="input"required>
+                    <a href="#" class="link">Forgot your password?</a>
+                    <button class="btn" type="submit" >Sign In</button>
+                </form>
+            </div>
+
+            <!-- Overlay -->
+            <div class="container__overlay">
+                <div class="overlay">
+                    <div class="overlay__panel overlay--left">
+                        <button class="btn" id="signIn">Sign In</button>
+                    </div>
+                    <div class="overlay__panel overlay--right">
+                        <button class="btn" id="signUp">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+<script type="text/javascript">
+const signInBtn = document.getElementById("signIn");
+const signUpBtn = document.getElementById("signUp");
+const fistForm = document.getElementById("form1");
+const secondForm = document.getElementById("form2");
+const container = document.querySelector(".container");
+
+signInBtn.addEventListener("click", () => {
+    container.classList.remove("right-panel-active");
+});
+
+signUpBtn.addEventListener("click", () => {
+    container.classList.add("right-panel-active");
+});
+
+</script>
 </body>
 </html>
